--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,6 @@
+[profile.release]
+debug = true
+
 [package]
 name = "Ion"
 version = "0.1.0"
@@ -8,3 +11,4 @@ once_cell = "1.21.3"
 
 ion_macros = { path = "./ion_macros" }
 num-traits = "0.2.19"
+pprof = { version = "0.14", features = ["flamegraph"] }
